Replaced Guava utility methods with JDK equivalents